--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "jsnext:main": "index.es6.js",
   "babel": {
     "presets": [
-      "es2015",
+      "latest",
       "stage-0"
     ],
     "plugins": [
@@ -37,8 +37,8 @@
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-latest": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
