--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "private": true,
-  "name": "babel-starter-kit",
-  "version": "0.0.0",
-  "description": "A project template for authoring and publishing JavaScript libraries",
-  "homepage": "https://www.kriasoft.com/babel-starter-kit/",
-  "repository": "kriasoft/babel-starter-kit",
-  "author": "Kriasoft <hello@kriasoft.com> (https://www.kriasoft.com)",
-  "contributors": [
-    "Konstantin Tarkus <hello@tarkus.me>"
-  ],
+  "name": "postcodes",
+  "version": "0.0.1",
+  "description": "A postcodes validator and importer",
+  "author": "Duncan MacKenzie <duncan@duncanmacweb.com>",
   "license": "MIT",
   "keywords": [],
   "main": "index.js",
   "jsnext:main": "index.es6.js",
   "babel": {
     "presets": [
-      "latest",
+      "es2017",
+      "es2016",
+      "es2015",
       "stage-0"
     ],
     "plugins": [
@@ -30,15 +27,21 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1"
+    "babel-runtime": "^6.6.1",
+    "csv": "^1.1.0",
+    "mathjs": "^3.5.1",
+    "performance-now": "^0.2.0",
+    "progress": "^1.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-rollup": "^1.1.1",
-    "babel-preset-latest": "^6.14.0",
+    "babel-preset-es2016": "^6.11.3",
+    "babel-preset-es2017": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
@@ -53,17 +56,18 @@
     "mocha": "^2.4.5",
     "rollup": "^0.26.2",
     "rollup-plugin-babel": "^2.4.0",
-    "sinon": "^2.0.0-pre"
+    "sinon": "^2.0.0-pre",
+    "sleep": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint src test tools",
-    "test": "mocha --compilers js:babel-register",
-    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
-    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+    "test": "mocha --harmony_regexp_lookbehind --compilers js:babel-register",
+    "test:watch": "mocha --harmony_regexp_lookbehind --compilers js:babel-register --reporter min --watch",
+    "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --harmony_regexp_lookbehind",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "node tools/build",
+    "build": "node --harmony_regexp_lookbehind tools/build",
     "prepublish": "npm run build",
     "publish:docs": "easystatic deploy docs --repo kriasoft/babel-starter-kit",
-    "start": "easystatic start docs"
+    "start": "babel-node --harmony_regexp_lookbehind --presets es2017,es2016,es2015,stage-0 -- ./src/index.js"
   }
 }
